--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="set"><h1>Build <br>Game <br> JavaScript</h1></div>
     <section>
     <div class="chance">
-        <p>Guess a number 1 to 100 your number is high
+        <p>Guess a number 1 to 100 if your number is high
         <form>
             <input type="number"
              required>
@@ -23,6 +23,7 @@
         </form>
         <p>Try your Luck</p>
     </div>
+    <h3>code by PrimeTech</h3>
     </section>
     
     </main>
